fix dark mode radio buttons and checkboxes

--- a/assets/styles/common/controls.scss
+++ b/assets/styles/common/controls.scss
@@ -7,10 +7,14 @@
   }
 }
 
+input[type='radio'],
+input[type='radio']:checked,
 .oli-radio[type='radio'] {
   color: var(--color-delivery-primary);
 }
 
+input[type='checkbox'],
+input[type='checkbox']:checked,
 .oli-checkbox[type='checkbox'] {
   color: var(--color-delivery-primary);
 }
